--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -13,8 +13,9 @@
     />
     <link href-"{%static 'app/css/style.css'%}" rel="stylesheet"/> <link
     href-"{%static 'app/css/owl.carousel.min.css'%}" rel="stylesheet"/> <link
-    href-"{%static 'app/css/all.min.css'%}" rel="stylesheet"/> {% comment %}
-    JS{% endcomment %}
+    href-"{%static 'app/css/all.min.css'%}" rel="stylesheet"/> <link
+    rel="stylesheet" type="text/css" href-"{%static 'app/css/main.css'%}"/>
+    {%comment %} JS{% endcomment %}
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
       integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
@@ -41,7 +42,7 @@
     {% comment %} Header {% endcomment %}
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="{%url 'home'%}"
           ><img src="{%static 'app/images/Neel.png'%}" width="50" height="50"
         /></a>
 
@@ -59,7 +60,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="{%url 'home'%}"
                 >Trang chủ</a
               >
             </li>
@@ -117,7 +121,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Giỏ hàng</a>
+            <a class="nav-link" href="{% url 'cart'%}">Giỏ hàng</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Đăng nhập</a>
@@ -128,8 +132,13 @@
         </ul>
       </div>
     </nav>
-    <!--main-->
-    {%block main-content%} wellcom my website! {%endblock main-content%}
+    <!--main body-->
+    {% block banner-slider%} {%endblock banner-slider%} {%block main-content%}
+    {%endblock main-content%}
+    <!--Giao dien cart-->
+    {% block cart_content %}{%endblock cart_content%}
+    <!--Giao dien checkout-->
+    {% block content_checkout %} {% endblock content_checkout %}
     <!--footer-->
     <footer
       class="container--fluid bg-success text-center fixed-bottom p-2 mt-5"
