--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -1,2 +1,169 @@
-{% extends "app/base.html" %} {%load static%} {% block main-content %} wellcome
-website! {%endblock main-content %}
+{% extends "app/base.html" %} {%load static%} {% block banner-slider%}
+<div id="carouselExampleDark" class="carousel carousel-dark slide">
+  <div class="carousel-indicators">
+    <button
+      type="button"
+      data-bs-target="#carouselExampleDark"
+      data-bs-slide-to="0"
+      class="active"
+      aria-current="true"
+      aria-label="Slide 1"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleDark"
+      data-bs-slide-to="1"
+      aria-label="Slide 2"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleDark"
+      data-bs-slide-to="2"
+      aria-label="Slide 3"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleDark"
+      data-bs-slide-to="3"
+      aria-label="Slide 4"
+    ></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active" data-bs-interval="10000">
+      <img
+        src="{%static 'app/images/banner/b1.jpg'%}"
+        class="d-block w-100"
+        alt="Sữa con bò "
+        height="400"
+      />
+      <div class="carousel-caption d-none d-md-block bg-success text-white">
+        <h5>Sữa con heo</h5>
+        <p>Uống vào béo như heo.</p>
+      </div>
+    </div>
+    <div class="carousel-item" data-bs-interval="2000">
+      <img
+        src="{%static 'app/images/banner/b2.jpg'%}"
+        class="d-block w-100"
+        alt="Sữa con bò "
+        height="400"
+      />
+      <div class="carousel-caption d-none d-md-block bg-success text-whit">
+        <h5>Sữa con bò</h5>
+        <p>Uống vào béo như bò.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img
+        src="{%static 'app/images/banner/b3.jpg'%}"
+        class="d-block w-100"
+        alt="Sữa con dê"
+        height="400"
+      />
+      <div class="carousel-caption d-none d-md-block bg-success text-whit">
+        <h5>Sữa con dê</h5>
+        <p>Uống vào béo như dê.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img
+        src="{%static 'app/images/banner/b4.jpg'%}"
+        class="d-block w-100"
+        alt="Sữa con cừu"
+        height="400"
+      />
+      <div class="carousel-caption d-none d-md-block bg-success text-whit">
+        <h5>Sữa con cừu</h5>
+        <p>Uống vào béo như cừu.</p>
+      </div>
+    </div>
+  </div>
+  <button
+    class="carousel-control-prev"
+    type="button"
+    data-bs-target="#carouselExampleDark"
+    data-bs-slide="prev"
+  >
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button
+    class="carousel-control-next"
+    type="button"
+    data-bs-target="#carouselExampleDark"
+    data-bs-slide="next"
+  >
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+{%endblock banner-slider%} {%block main-content%}
+<div class="row">
+    <div class="col-lg-3">
+        <img class="thumbnail" src="{%static 'app/images/cow-ghee.png'%}" height="200" />
+        <div class="box-element product">
+            <h6><strong>Sữa con bò</strong></h6>
+            <hr>
+            <button class="btn btn-outline-secondary add-btn">Thêm giỏ hàng</button>
+            <a class="btn btn-outline-success" href="#">Xem</a>
+            <h3 style="display: inline-block; float: right"><strong>200.000 VND<strong></h3>
+        </div>
+    </div>
+    <div class="col-lg-3">
+        <img class="thumbnail" src="{%static 'app/images/cow-milk.png'%}" height="200" />
+        <div class="box-element product">
+            <h6><strong>Sữa con heo</strong></h6>
+            <hr>
+            <button class="btn btn-outline-secondary add-btn">Thêm giỏ hàng</button>
+            <a class="btn btn-outline-success" href="#">Xem</a>
+            <h3 style="display: inline-block; float: right"><strong>200.000 VND<strong></h3>
+        </div>
+    </div>  
+    <div class="col-lg-3">
+        <img class="thumbnail" src="{%static 'app/images/buffalo-ghee.png'%}" height="200" />
+        <div class="box-element product">
+            <h6><strong>Sữa con trâu</strong></h6>
+            <hr>
+            <button class="btn btn-outline-secondary add-btn">Thêm giỏ hàng</button>
+            <a class="btn btn-outline-success" href="#">Xem</a>
+            <h3 style="display: inline-block; float: right"><strong>200.000 VND<strong></h3>
+        </div>
+    </div>    
+</div>
+<div class="row">
+    <div class="col-lg-3">
+        <img class="thumbnail" src="{%static 'app/images/cow-ghee.png'%}" height="200" />
+        <div class="box-element product">
+            <h6><strong>Sữa con bò</strong></h6>
+            <hr>
+            <button class="btn btn-outline-secondary add-btn">Thêm giỏ hàng</button>
+            <a class="btn btn-outline-success" href="#">Xem</a>
+            <h3 style="display: inline-block; float: right"><strong>200.000 VND<strong></h3>
+        </div>
+    </div>
+    <div class="col-lg-3">
+        <img class="thumbnail" src="{%static 'app/images/cow-milk.png'%}" height="200" />
+        <div class="box-element product">
+            <h6><strong>Sữa con heo</strong></h6>
+            <hr>
+            <button class="btn btn-outline-secondary add-btn">Thêm giỏ hàng</button>
+            <a class="btn btn-outline-success" href="#">Xem</a>
+            <h3 style="display: inline-block; float: right"><strong>200.000 VND<strong></h3>
+        </div>
+    </div>  
+    <div class="col-lg-3">
+        <img class="thumbnail" src="{%static 'app/images/kulfi.png'%}" height="200" />
+        <div class="box-element product">
+            <h6><strong>Sữa con cừu</strong></h6>
+            <hr>
+            <button class="btn btn-outline-secondary add-btn">Thêm giỏ hàng</button>
+            <a class="btn btn-outline-success" href="#">Xem</a>
+            <h3 style="display: inline-block; float: right"><strong>200.000 VND<strong></h3>
+        </div>
+    </div>    
+</div>
+<br />
+<br />
+<br />
+{%endblock main-content%}
+
