--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -98,69 +98,20 @@
   </button>
 </div>
 {%endblock banner-slider%} {%block main-content%}
-<div class="row">
-    <div class="col-lg-3">
+<div class="row" style="width:100%">
+    {%for product in products%}
+    <div class="col-lg-4">
         <img class="thumbnail" src="{%static 'app/images/cow-ghee.png'%}" height="200" />
         <div class="box-element product">
-            <h6><strong>Sữa con bò</strong></h6>
+            <h6><strong>{{product.name}}</strong></h6>
             <hr>
             <button class="btn btn-outline-secondary add-btn">Thêm giỏ hàng</button>
             <a class="btn btn-outline-success" href="#">Xem</a>
-            <h3 style="display: inline-block; float: right"><strong>200.000 VND<strong></h3>
+            <h3 style="display: inline-block; float: right"><strong>{{product.price | floatformat:2}}<strong></h3>
         </div>
     </div>
-    <div class="col-lg-3">
-        <img class="thumbnail" src="{%static 'app/images/cow-milk.png'%}" height="200" />
-        <div class="box-element product">
-            <h6><strong>Sữa con heo</strong></h6>
-            <hr>
-            <button class="btn btn-outline-secondary add-btn">Thêm giỏ hàng</button>
-            <a class="btn btn-outline-success" href="#">Xem</a>
-            <h3 style="display: inline-block; float: right"><strong>200.000 VND<strong></h3>
-        </div>
-    </div>  
-    <div class="col-lg-3">
-        <img class="thumbnail" src="{%static 'app/images/buffalo-ghee.png'%}" height="200" />
-        <div class="box-element product">
-            <h6><strong>Sữa con trâu</strong></h6>
-            <hr>
-            <button class="btn btn-outline-secondary add-btn">Thêm giỏ hàng</button>
-            <a class="btn btn-outline-success" href="#">Xem</a>
-            <h3 style="display: inline-block; float: right"><strong>200.000 VND<strong></h3>
-        </div>
-    </div>    
-</div>
-<div class="row">
-    <div class="col-lg-3">
-        <img class="thumbnail" src="{%static 'app/images/cow-ghee.png'%}" height="200" />
-        <div class="box-element product">
-            <h6><strong>Sữa con bò</strong></h6>
-            <hr>
-            <button class="btn btn-outline-secondary add-btn">Thêm giỏ hàng</button>
-            <a class="btn btn-outline-success" href="#">Xem</a>
-            <h3 style="display: inline-block; float: right"><strong>200.000 VND<strong></h3>
-        </div>
-    </div>
-    <div class="col-lg-3">
-        <img class="thumbnail" src="{%static 'app/images/cow-milk.png'%}" height="200" />
-        <div class="box-element product">
-            <h6><strong>Sữa con heo</strong></h6>
-            <hr>
-            <button class="btn btn-outline-secondary add-btn">Thêm giỏ hàng</button>
-            <a class="btn btn-outline-success" href="#">Xem</a>
-            <h3 style="display: inline-block; float: right"><strong>200.000 VND<strong></h3>
-        </div>
-    </div>  
-    <div class="col-lg-3">
-        <img class="thumbnail" src="{%static 'app/images/kulfi.png'%}" height="200" />
-        <div class="box-element product">
-            <h6><strong>Sữa con cừu</strong></h6>
-            <hr>
-            <button class="btn btn-outline-secondary add-btn">Thêm giỏ hàng</button>
-            <a class="btn btn-outline-success" href="#">Xem</a>
-            <h3 style="display: inline-block; float: right"><strong>200.000 VND<strong></h3>
-        </div>
-    </div>    
+     
+    {% endfor %}
 </div>
 <br />
 <br />
