--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -101,7 +101,7 @@
 <div class="row" style="width:100%">
     {%for product in products%}
     <div class="col-lg-4">
-        <img class="thumbnail" src="{%static 'app/images/cow-ghee.png'%}" height="200" />
+        <img class="thumbnail" src="{{product.ImageURL}}" height="200" />
         <div class="box-element product">
             <h6><strong>{{product.name}}</strong></h6>
             <hr>
