--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -35,7 +35,9 @@
     <script src="{%static 'app/js/all.min.js'%}"></script>
     <script src="{%static 'app/js/myscript.js'%}"></script>
     <script src="{%static 'app/js/owl.carousel.min.js'%}"></script>
-
+    <script type="text/javascript">
+      var user = "{{request.user}}";
+    </script>
     <title>Website ban hang</title>
   </head>
   <body>
@@ -85,7 +87,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Giới thiệu</a>
+              <a class="nav-link" href="{%url 'cart'%}">Cart</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Liên hệ</a>
@@ -116,7 +118,9 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">Trang cá nhân</a></li>
-              <li><a class="dropdown-item" href="#">Đơn hàng</a></li>
+              <li>
+                <a class="dropdown-item" href="{%url 'cart'%}">Đơn hàng</a>
+              </li>
               <li><a class="dropdown-item" href="#">Thoát</a></li>
             </ul>
           </li>
@@ -145,5 +149,6 @@
     >
       copyright 2024
     </footer>
+    <script src="{%static 'app/js/cart.js'%}"></script>
   </body>
 </html>
