--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -105,7 +105,7 @@
         <div class="box-element product">
             <h6><strong>{{product.name}}</strong></h6>
             <hr>
-            <button class="btn btn-outline-secondary add-btn">Thêm giỏ hàng</button>
+            <button data-product={{product.id}} data-action = "add" class="btn btn-outline-secondary add-btn update-cart">Add to cart</button>
             <a class="btn btn-outline-success" href="#">Xem</a>
             <h3 style="display: inline-block; float: right"><strong>{{product.price | floatformat:2}}<strong></h3>
         </div>
