--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -32,11 +32,30 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
+    <script src="{%static 'app/js/owl.carousel.min.js'%}"></script>
     <script src="{%static 'app/js/all.min.js'%}"></script>
     <script src="{%static 'app/js/myscript.js'%}"></script>
-    <script src="{%static 'app/js/owl.carousel.min.js'%}"></script>
+
     <script type="text/javascript">
       var user = "{{request.user}}";
+      function getCookie(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== "") {
+          const cookies = document.cookie.split(";");
+          for (let i = 0; i < cookies.length; i++) {
+            const cookie = cookies[i].trim();
+            // Does this cookie string begin with the name we want?
+            if (cookie.substring(0, name.length + 1) === name + "=") {
+              cookieValue = decodeURIComponent(
+                cookie.substring(name.length + 1)
+              );
+              break;
+            }
+          }
+        }
+        return cookieValue;
+      }
+      const csrftoken = getCookie("csrftoken");
     </script>
     <title>Website ban hang</title>
   </head>
