--- a/app/templates/app/cart.html
+++ b/app/templates/app/cart.html
@@ -1,5 +1,5 @@
 {% extends 'app/base.html' %} {% load static %} {% block cart_content %}
-<div class="row">
+<div class="row" style="width: 100%">
   <div class="col-lg-12">
     <div class="box-element">
       <a class="btn btn-outline-dark" href="{% url 'home' %}"
